src/app/App.scss
body,
html {
    width: 100%;
    height: 100vh;
}

#root {
    height: 100vh;
    //Header bar

    .MuiContainer-root {
        height: 100%;
    }
}

.home {
    .nav {
        width: 60px;
        background: #181818;

        .MuiListItemText-root {
            display: none;
        }
    }

    .main {
        display: flex;
    }

    .content {
        flex-grow: 1;
    }
}

.menuList {
    .MuiListItemIcon-root {
        display: none;
        min-width: 32px;
    }
}

.topBar {
    .MuiToolbar-root {
        width: 100%;
        display: flex;
        flex-direction: row;
        background: #181818;
    }

    span.spacer {
        display: inline-block;
        flex-grow: 1;
    }

    div.accountMenu {
        display: inline-block;
    }

    .MuiTypography-h1 {
        font-size: 1.25rem;
        font-family: "Allan", sans-serif;
        font-weight: 500;
        line-height: 1.6;
        letter-spacing: 0.0075em;
        color: #ffffff;
        margin-right: 20px;
    }
}

.contactsBox {
    position: relative;
}

.gridToolbar {
    display: flex;
    justify-content: space-between;

    .label {
    }

    .search {
        position: relative;

        input[type="search"] {
            padding: 0px 0px 3px 30px !important;
            height: 18px;
            width: 100%;
        }

        .searchIcon {
            position: absolute;
            top: -5px;
            left: 0px;
        }
    }
}

.contactList {
    //Remove cell focus rectangle outline
    .MuiDataGrid-columnHeader:focus,
    .MuiDataGrid-cell:focus,
    .MuiDataGrid-columnHeader:focus-within,
    .MuiDataGrid-cell:focus-within {
        outline: none !important;
    }

    //column header background
    .MuiDataGrid-columnHeaderWrapper {
        background: #2d2d2d !important;
    }

    //Remove last column seperator lines
    .no-header {
        .MuiDataGrid-columnSeparator {
            display: none !important;
        }
    }

    //aleternate row colour
    .Mui-odd.MuiDataGrid-row {
        background: #4c4c4c;
    }

    .MuiDataGrid-cell:hover {
        text-decoration: underline;
        cursor: pointer;
    }
    .MuiDataGrid-cell[data-field="spacer"]:hover {
        text-decoration: none;
        cursor: default;
    }

    .MuiIconButton-edgeStart {
        margin-left: 0px !important;
    }
    .MuiIconButton-root {
        padding: 6px !important;
    }

    //pagination
    .cl-footer {
        display: flex;
        align-items: center;
        justify-content: space-between;
        padding: 10px 0px 10px 10px;
        min-height: 52px;

        .pagination {
            float: right;
        }

        .selected-controls {
            display: flex;
            align-items: center;
            .MuiInput-root {
                margin-left: 10px;
            }
            .MuiNativeSelect-select {
                height: auto !important;
            }
        }
    }
}

.toast {
    ul {
        margin: 10px 0px 0px 20px;
        padding: 0px;
    }
}

.home {
    height: 100%;
    
    .content {
        position: relative;
    }
}

.createEditPaper {
    position: absolute;
    top: 0;
    left: 0;
    background: white;
    width: 100%;
    height: 100%;
}

.createEditPaper.hidden {
    display: none;
}

.authPage {
    max-width: 500px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-top: 200px;

    .head {
        text-align: center;
        margin-bottom: 30px !important;

        .MuiAvatar-root {
            width: 40px !important;
            margin: 0 auto 10px auto;
        }
    }

    button[type="submit"] {
        margin-bottom: 8px;
    }

    .MuiFormControl-root {
        margin-bottom: 16px !important;
    }

    .MuiAutocomplete-inputRoot {
        padding: 4px !important;
    }

    .backdrop {
        z-index: 1000 !important;
        color: "#fff" !important;
    }

    .MuiContainer-root {
        .MuiPaper-root {
            padding: 10px !important;
        }
    }

    .enterCode {
        .MuiPaper-root {
            padding: 20px;
            margin-bottom: 10px;
        }

        .MuiTextField-root {
            width: 200px;
            margin: 0 auto !important;
            position: relative;
            left: 50%;
            transform: translateX(-50%);

            input[type="text"] {
                text-transform: uppercase;
                letter-spacing: 3px;
            }
        }
    }
}

.accountMenu .MuiPaper-root {
    margin: 30px 0px 0px -50px;
}

